@@ -18,6 +18,7 @@
 	(PokerTableTestCase.test10_info_and_chat): Wrote function.
 	(MockClient.autoBlindAnte): Wrote function.
 	(PokerTableTestCase.test11_packet): Wrote function.
+	(MockClient.sitOutPlayer): Wrote function.
 
 2008-01-19  Bradley M. Kuhn  <bkuhn@ebb.org>
 
